# astro-delight

./: .gitignore  .gitmodules  PaperResultReplication.ipynb  Pipfile  benchmarks.ipynb  example_raytune.ipynb  example_training.ipynb  model.ipynb  pyproject.toml  run.py  super_download.py
astro_delight/models/: __init__.py
astro_delight/models/cnn/: __init__.py  model.py
astro_delight/models/utils/: layers.py
astro_delight/notifier/: base.py  telegram.py
astro_delight/training/: cnn.py  dataset.py
astro_delight/tune/: search.py  trainer.py
delight/models/: __init__.py
delight/models/cnn/: __init__.py  layers.py  model.py
delight/models/tf/: models.py
delight/notifier/: telegram.py
delight/training/: cnn.py  dataset.py  utils.py
delightcnn/: dataset.py  schemas.py  training.py
delightcnn/panstarrs/: download.py  schemas.py
delightcnn/utils/: statistics.py  stoppers.py
models/delightcnn/: __init__.py  dataset.py  layers.py  model.py  schemas.py  training.py
panstarrs/: download.py
tests/models/: test_cnn.py
tests/models/utils/: test_rot_flip_layer.py
utils/: stoppers.py
weights/DelightPt/: trains.json
