[tool.poetry]
name = "delight"
version = "0.1.0"
description = ""
authors = ["Keviinplz <kevin.pinochet@ug.uchile.cl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = [
    { version = "2.1.0", source = "pytorch", platform = "!=darwin"},
    { version = "2.1.0", source = "pypi", platform = "darwin"},
]
torchvision = [
    { version = "0.16.0", source = "pytorch", platform = "!=darwin"},
    { version = "0.16.0", source = "pypi", platform = "darwin"},
]

numpy = "1.26.2"
ray = {extras = ["tune"], version = "2.8.0"}
gputil = "1.4.0"
python-telegram-bot = "20.6"
tensorflow = "2.14.1"
xarray = "2023.11.0"
astropy = "6.0.0"
sep = "1.2.1"
torch-tb-profiler = "^0.4.3"
astroquery = "^0.4.7"
einops = "^0.7.0"

[tool.poetry.group.study.dependencies]
matplotlib = "3.8.1"
tensorboard = "2.14.1"
tqdm = "4.66.1"
jupyter = "1.0.0"
ipywidgets = "8.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"
hypothesis = "6.88.4"
types-tensorflow = "2.12.0.10"
mypy = "1.7.1"
pandas-stubs = "2.1.1.230928"
types-tqdm = "4.66.0.5"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
plugins = "numpy.typing.mypy_plugin"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
